Fix Locale::new deprecation